@@ -1,3 +1,7 @@
+2013-04-24  Jes Frellsen  <frellsen@binf>
+
+	* scripts/details/utils.py: Added function unpickle_from_file.
+
 2012-12-07  Jes Frellsen  <frellsen@binf>
 
 	* muninn/Makefile.am: Updated Makefiles.
